navbar no longer breaks on screen width shrink

--- a/application/frontend/src/components/Nav/NavBar.module.css
+++ b/application/frontend/src/components/Nav/NavBar.module.css
@@ -9,10 +9,20 @@
     height: 100px;
     align-items: center;
     /* box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20); */
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .logo-img{
     height:80px;
     margin-bottom:20px;
 }
+
+@media all and (max-width: 1280px){
+    .navbar{
+        flex-direction: column;
+        height: auto;
+    }
+}
+
 
