--- a/application/frontend/src/components/Search/SearchBar.module.css
+++ b/application/frontend/src/components/Search/SearchBar.module.css
@@ -1,13 +1,5 @@
 @import url('https://www.w3schools.com/w3css/4/w3.css');
 
-/* button, select, height{
-  height:35px;
-} */
-
-/* * {
-    box-sizing: border-box;
-} */
-
 .searchbar{
   display:flex;
   flex-direction: row;
@@ -17,6 +9,7 @@
   align-items: center;
   font-family: var(--ff-primary);
   flex-shrink: 2;
+  justify-content: space-between;
 }
 
 .searchbar input{
@@ -45,43 +38,31 @@ select {
   cursor: pointer;
 }
 
-.searchbar .searchbar-search{
+.searchbar-search{
   width: 50px;
   height: 50px;
-  background: url("../../images/Third\ Party\ Icons/icons8-search-location-48.png") 100% no-repeat;
+  background: url("../../images/Third\ Party\ Icons/icons8-search-location-48.png") no-repeat;
 }
 
-.search-results ul li{
-  list-style: none;
-  display: block;
-  box-shadow: var(--elevation-1);
-  width: 95%;
-  margin-bottom: 25px;
-  padding: 10px 0 10px 10px;
-  border-radius: 10px;
-}
 
-.search-results li img{
-  max-width: 100px;
-  max-height:100px;
-  object-fit: cover;
-  display: inline-block;
-  margin-right: 10px;
-  border-radius: 10px;
 
-}
+@media all and (max-width: 1280px){
+  .searchbar{
+    width: 100%;
+    height: 50px;
+  }
+  .search-category-dropdown select{
+      font-size: var(--h4);
+      background-size: 10px 10px;
+      padding-right: 10px;
+  }
 
-.search-results span {
-  display:inline-block;
-  margin:0 15px auto 5px;
-  font-size: 20px;
-  text-align: left;
-  line-height: 1.6;
-  top: 0;
-  font-family: var(--ff-primary);
-  font-weight: 600;
-}
+  .searchbar input{
+    font-size: 1em;
+    width:100% !important;
+    margin: 0;
+  }
 
-.search-result{
-  display: block;
+  .searchbar-search{
+  }
 }
